public/css/pages/what-we-do.less
.page-what-we-do {
  .page__body-title::after {
    background-color: @accent-pink;
  }

  .work-with-us .work-with-us__title::after {
    background-color: @accent-pink;
  }

  [data-hitnor],
  [data-hitfix],
  [data-hitabs] {
    z-index: 1;
    position: absolute;
    width: 1px;
    top: 0;
    left: 0;
    bottom: 0;
  }
}

.what-we-do__disciplines-wrapper,
.what-we-do__offerings-wrapper {
  padding: 0 6rem;

  .page__intro {max-width: 100%}
}

.what-we-do__discipline-inner {
  position: relative;
  padding-top: 100%;
}

.what-we-do__discipline-inner-center {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}

.what-we-do__discipline-label,
.what-we-do__offering-label {
  letter-spacing: 3px;
  color: #A1ADB3;
}

.what-we-do__discipline-title,
.what-we-do__offering-title {
  font-size: 2rem;
}

.what-we-do__discipline-desc,
.what-we-do__offering-desc {
  font-size: 1.333rem;
  line-height: 1.88em;
  color: @color-neutral-dark;
}

.what-we-do__offering-desc {
  color: #DAE2E6;
}

/* offerings */
.what-we-do__offerings-wrapper {
  color: @color-white;
}

.what-we-do__offering-icon {
  > svg {
    width: 50%;
    height: 50%;
  }
}

.what-we-do__offerings-row {
  padding: 8em 0;
}

.offering-brand-development .what-we-do__offering-icon > svg,
.offering-mobile .what-we-do__offering-icon > svg {
  width: 30%;
}

.what-we-do__disciplines-graphic-circle {
  &.offering {
    width: 70%;
    padding-top: 70%;
    border-color: #979797;
  }
}

.touch {
  .what-we-do__disciplines-wrapper {
    padding-top: 5rem;
  }

  .what-we-do__disciplines-graphic  {
    display: none;
  }

  .what-we-do__disciplines-row {
    padding: 0 0 5rem;
  }

  .what-we-do__discipline-inner {
    padding: 0;
  }

  .what-we-do__discipline-inner-center {
    position: initial;
    transform: initial;
    padding: 0;
  }

  .what-we-do__discipline {
    width: 100%;
  }
}

@media all and (max-width: 768px) {
  .what-we-do__disciplines-row {
    padding-bottom: 5rem;
  }

  .what-we-do__offerings-row {
    padding: 0 0 5rem;
  }

  .what-we-do__disciplines-graphic  {
    display: none;
  }

  .what-we-do__discipline,
  .what-we-do__offering {
    width: 100%;
    padding: 0;
  }

  .what-we-do__discipline-inner {
    padding: 0;
  }

  .what-we-do__discipline-inner-center {
    position: initial;
    top: initial;
    left: initial;
    transform: initial;
    padding: initial;
  }

  .what-we-do__offering-icon {
    display: none;
  }
}

